fixed logo whitespace

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,7 +5,7 @@ body {
   font-family: 'Quando', serif;
 }
 #logo {
-  background-image: url("../../public/images/logo.png");
+  background-image: url("../../public/images/logoFinal.png");
   background-size: contain;
   min-height: 20vh;
   background-repeat: no-repeat;
